# football-ranking-2

./: README.md  docker-compose.yaml
client/: .env  .env.production  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/src/: App.vue  main.ts
client/src/api/: config.ts  index.ts
client/src/components/: Ranking.vue  Scores.vue  Table.vue
client/src/stores/: index.ts
server/: Dockerfile  pyproject.toml
server/scripts/: scores.py
server/src/football_ranking_api/: __init__.py  __main__.py  config.py  rank.py  scores.py
server/src/fsapi_template/: __init__.py
