[project]
name = "football-ranking-api"
version = "0.1.0"
description = "A template for FastAPI project."
authors = [{ name = "phcreery", email = "phcreery@gmail.com" }]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic-settings>=2.3.1",
    "toml>=0.10.2",
    "requests>=2.32.3",
    "httpx>=0.27.2",
    "numpy>=2.1.1",
    "scipy>=1.14.1",
    "sympy>=1.13.3",
    "pandas>=2.2.3",
]
readme = "README.md"
requires-python = ">= 3.9"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
# the cmd must be a String
# project scripts will be compiled into the executable file
"unit" = "scripts:mk_unit"
"rotate" = "scripts:mk_rotate"
"init" = "scripts:init_project_details"
"start" = "football_ranking_api.__main__:main"

[tool.rye.scripts]
# the cmd can be a String or an array of args
# rye scripts will not be compiled into the executable file
"dev" = { cmd = "python -m football_ranking_api", env = { "RELOAD" = "True", "LOG_LEVEL" = "debug" } }


[tool.rye]
managed = true
dev-dependencies = [
    "coverage>=7.5.4",
    "pytest>=8.2.2",
    "ipython>=8.29.0",
    "ipykernel>=6.29.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/football_ranking_api", "scripts"]

[tool.ruff]
fix = true
line-length = 80
include = ["pyproject.toml", "src/**/*.py", "scripts/**/*.py"]

[tool.ruff.format]
# Use `\n` line endings for all files
line-ending = "lf"


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
